--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,4 @@
 logging.level.com.example.demo==DEBUG
-server.port=8081
-spring.datasource.url=jdbc:mysql://localhost:3306/sys
-spring.datasource.username=root
-spring.datasource.password=root
+spring.port=9999
 spring.jpa.hibernate.ddl-auto=update
+spring.profiles.active=native
