--- a/application.properties
+++ b/application.properties
@@ -2,3 +2,4 @@ logging.level.com.example.demo==DEBUG
 spring.port=9999
 spring.jpa.hibernate.ddl-auto=update
 spring.profiles.active=native
+app.message=From git hub
